add dataset verification
